# models/index.js
@@ -1,8 +1,10 @@
 const allmovies = require('./allmovies');
 const movies = require('./movies');
+const shibaimages = require('./shibaimages');
 const users = require('./users');
 
 module.exports = {
   allmovies,
   movies,
+  shibaimages,
   users};
